--- a/joke/src/main/AndroidManifest.xml
+++ b/joke/src/main/AndroidManifest.xml
@@ -9,10 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service
-            android:name=".DelayedMessageService"
-            android:exported="false"></service>
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".DelayedMessageService"
+            android:exported="false" />
+
     </application>
 
 </manifest>
